--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body{
     background-position: center;
     background-attachment: fixed;
     background-image:url(images/G1Bjkc.jpg);
-    overflow:hidden
+    height:fit-content;
+    overflow:auto;
     
 }
 .avatar{
