--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
     background-attachment: fixed;
     background-image:url(images/G1Bjkc.jpg);
     height:fit-content;
-    overflow:auto;
+    overflow:hidden;
     
 }
 .avatar{
